[package]
name = "quadim"
version = "0.1.1"
edition = "2021"

description = "Fastest image quadtree stylization implementation to date, capable of hundreds of fps and avoiding ugly non-squares."

documentation = "https://docs.rs/quadim"
repository = "https://github.com/eternal-io/quadim"
license = "MIT OR Apache-2.0"
readme = "CRATES.IO-README.md"

keywords = ["quadtree", "image", "stylized", "pixel", "art"]
categories = [
    "algorithms",
    "computer-vision",
    "command-line-utilities",
    "multimedia::images",
    "visualization",
]

exclude = ["img/**", "*.md", "!CRATES.IO-README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.rhai]
# version = "1.14.0"
# features = [
#     "sync",
#     "no_time",
#     "no_object",
#     "no_closure",
#     "no_custom_syntax",
#     "only_i64",
#     "f32_float",
# ]

[dependencies]
image = "0.25.1"
imageproc = "0.24.0"
nalgebra = "0.32.2"
csscolorparser = "0.6.2"
thiserror = "1.0.40"

clap = { version = "4.5.4", features = ["derive"], optional = true }
num_cpus = { version = "1.16.0", optional = true }
threadpool = { version = "1.8.1", optional = true }
object-pool = { version = "0.5.4", optional = true }

src-dst-clarifier = { version = "~0.2.0", optional = true }


[features]
build-bin = [
    "clap",
    "num_cpus",
    "threadpool",
    "object-pool",
    "src-dst-clarifier",
]

[[bin]]
name = "quadim"
required-features = ["build-bin"]


[profile.dev]
opt-level = 1
overflow-checks = false

[profile.release]
opt-level = 3                     # 最高优化级别
lto = true                        # 启用链接时优化（Link-Time Optimization）
codegen-units = 1                 # 将代码生成单元的数量设置为1，以允许更大的内联和优化
debug = false                     # 禁用调试信息，减少二进制大小，提高性能
debug-assertions = false          # 禁用调试断言
overflow-checks = false           # 关闭整数溢出检查
panic = 'abort'                   # 使用abort模式处理panic，而不是 unwind，这通常更轻量级且更快
incremental = false               # 禁用增量编译，以确保完全重新编译，这可能会提高优化效果